# Chelik

./: .#.gitignore  .gitignore  CMakeLists.txt  README.md  README.md~  chel  chelik  chelik.cpp  cppshni-chel.cpp~  functions.cpp~  functions.h~  poses.cpp~
libs/: #errors.cpp#  .#errors.cpp  colors.cpp  colors.cpp~  colors.h  colors.h~  flags.cpp  flags.h  functions.cpp  functions.cpp~  functions.h  functions.h~  poses.cpp  poses.cpp~  poses.h
tests/: #test_poses.cpp#  CMakeCache.txt  CMakeLists.txt  test_color.cpp  test_flags.cpp
